primer afiliado y prestador

--- a/MVCTurnera/appsettings.json
+++ b/MVCTurnera/appsettings.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    //"EscuelaDBConnection": "server=MY_SERVER;database=EscuelaDB;User "ID=MY_USER;password=MY_PASSWORD;",
+    "TurneraDBConnection": "Server=LAPTOP-Q3J3RQ19\\SQLEXPRESS;Database=TurneraDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
+
